Closed
Bug 85261
Opened 24 years ago
Closed 24 years ago
Browser Window's Title Bar Text customization broken
Categories
(CCK Graveyard :: CCK-Wizard, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: blee, Assigned: shrutiv)
Details
(Whiteboard: regression, nscckRTM)
Attachments
(2 files)
2.35 KB,
patch
|
Details | Diff | Splinter Review | |
1.70 KB,
patch
|
Details | Diff | Splinter Review |
Text input in Browser Window's Title Bar Text doesn't work - text input fails to
be displayed.
Observed in 6/8 cand bld.
Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Sounds like we could still ship beta with this and just mention this in the
release notes. It doesn't crash or break anything else - it just doesn't
implement one specific customization. Correct me if I am wrong or if you think
this problem is more major.
cc'ing kristif to add to release notes.
What happens now?
Does it always use the default branding (e.g., "Netscape" or "Mozilla")?
Or is it left blank?
Assignee | ||
Comment 3•24 years ago
|
||
It always displays Netscape 6. The error is because the string
"mainWindow.titlemodifier" which customizes the title bar has been
eliminated in the Netscape xpi files of CCK build 6/8.
Assignee | ||
Comment 4•24 years ago
|
||
Assignee | ||
Comment 5•24 years ago
|
||
Checked in patch files. Marking this fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Reopening as the problem came back (regressed) in 7/3 bld which contains the
latest NS6.1 bits off the branch MOZILLA_0_9_2_BRANCH.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Assignee | ||
Updated•24 years ago
|
Status: REOPENED → ASSIGNED
Whiteboard: nscckb1 → nscckRTM
Assignee | ||
Comment 8•24 years ago
|
||
Assignee | ||
Comment 9•24 years ago
|
||
This problem does not occur in CCK build 07/10.
Reporter | ||
Comment 10•24 years ago
|
||
Fixed in 7/10 bld.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•