Fix for bug 85261: Browser Window's Title Bar Text customization broken Removing build name from title bar (r=bobj)